--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".vista.Marcas" />
+        <activity android:name=".vista.Marcas"
+            android:windowSoftInputMode="adjustPan|adjustResize"/>
+
         <activity android:name=".vista.Productos"></activity>
     </application>
 
