--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".vista.MainActivity">
+        <activity android:name=".vista.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,10 +17,11 @@
         </activity>
         <activity
             android:name=".vista.Marcas"
-            android:windowSoftInputMode="adjustPan|adjustResize" />
-        <activity android:name=".vista.Productos" />
-        <activity android:name=".vista.EditarBorrar" />
-        <activity android:name=".ListaProductos"></activity>
+            android:windowSoftInputMode="adjustPan|adjustResize" android:screenOrientation="portrait"/>
+        <activity android:name=".vista.Productos" android:screenOrientation="portrait"/>
+        <activity android:name=".vista.EditarBorrarMarcasYListarProductos" android:screenOrientation="portrait"/>
+        <activity android:name=".ListaProductos" android:screenOrientation="portrait"/>
+        <activity android:name=".vista.nuevaMarca" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
